--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/kulmanshu/learning-mui#readme",
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "next": "^9.3.1",
+    "next": "^9.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
